# QR-Code-Reader

./: .gitignore  CMakeLists.txt  Decoder.cpp  Gitpush.txt  README.md  conanfile.py  conanfile.txt  error-log-ViennaExample.txt  format-project.sh  gitpush.txt
cmake/: ProjectConfig.cmake.in  ViennaExampleConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
example/: HelloWorld.py
include/: Decoder.hpp  GUI.hpp  GtkFileExplorer.hpp  HelloWorld.hpp  ImageFinder.hpp  QRData.hpp  QualityImprove.hpp  ViennaExample.hpp  ZXDecoder.hpp  ZXEncoder.hpp  fotocamera.hpp
lib/: Decoder.cpp  GUI.cpp  GtkFileExplorer.cpp  HelloWorld.cpp  ImageFinder.cpp  QRData.cpp  QualityImprove.cpp  ZXEncoder.cpp  fotocamera.cpp  main  setup.py
lib/viennatp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: ModuleA.hpp
src/pybind11/: pyModuleA.cpp
test/: CMakeLists.txt  ClassDecoder.cpp  ClassFotocamera.cpp  ClassGtkFileExplorer.cpp  ClassHelloWorld.cpp  ClassHelloWorld.py  ClassOutput.cpp  ClassQualityImprove.cpp  ClassZXDecoder.cpp  ClassZXEncoder.cpp  ColorChange.cpp  Startup_GUI.cpp  UI_test.cpp  ZXing_Encoder_Example.cpp  main
ui mockups/: ui mockup.pptx  ui-mockup.xlsx
wrapping/: CMakeLists.txt
wrapping/Python/: CMakeLists.txt  PythonWrapping.cpp  setup.py
wrapping/Python/PythonLib/: __init__.py
