cmake_minimum_required(VERSION 3.16)

project("Documentation")

# doxygen is required to build docs
find_package(doxygen REQUIRED)

# set folder structure we want to get in the end
set(DOXYGEN_INPUT_DIR ${PROJECT_ROOT})
set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
set(DOXYGEN_INDEX_FILE ${DOXYGEN_OUTPUT_DIR}/xml/index.xml)

# set input and output files
set(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
set(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

# configure the doxygen input file, which will be populated with our values
configure_file(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)

file(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIR})
add_custom_command(OUTPUT ${DOXYGEN_INDEX_FILE}
                   DEPENDS ${HPP_FILES} # if headers change, rebuild docs
                   COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
                   MAIN_DEPENDENCY ${DOXYFILE_OUT} ${DOXYFILE_IN}
                   COMMENT "Generating API documentation with Doxygen")

# make target to execute doxygen command
add_custom_target(docs DEPENDS ${DOXYGEN_INDEX_FILE})
